# aw-index-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml  sync-files.yaml
.github/workflows/: ci.yaml  release.yaml
js/: README.md  compose.mjs  compose.test.mjs  conformance_driver.mjs
src/aw_index_cli/: check.py  cli.py  compose.py  gitref.py  history.py  listing.py  registry.py  report.py  workspace.py
tests/: conftest.py  test_check.py  test_cli.py  test_compose.py  test_conformance.py  test_gitref.py  test_history.py  test_listing.py  test_registry.py  test_workspace.py
