[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aw-index-cli"
dynamic = ["version"]
description = "Consumer CLI for the autoware-index registry"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Autoware Foundation", email = "mfc@autoware.org" }]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
aw-index-cli = "aw_index_cli.cli:main"

[tool.hatch.version]
path = "src/aw_index_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aw_index_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
